welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: ')' expected but '[' found.
	if (talking == true && hour == [0,7] || talking == true && hour == [20,23]
                                       ^parotTrouble:4: error: ';' expected but 'else' found.
	}else{ return false
         ^parotTrouble:7: error: Unmatched closing brace '}' ignored here
 }
 ^